--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -11,6 +11,11 @@
         <item>网络视频帧</item>
         <item>自动抢红包</item>
         <item>抽奖转盘</item>
+        <item>动画集合</item>
+    </string-array>
 
+    <string-array name="anima_array">
+        <item>3D旋转</item>
+        <item>淡入淡出动画</item>
     </string-array>
 </resources>
