--- a/app/src/main/res/layout/activity_fade_anima.xml
+++ b/app/src/main/res/layout/activity_fade_anima.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@+id/lv_test"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="match_parent"></ListView>
 
     <TextView
         android:id="@+id/tv_anima_source"
